--- a/client/views/templates/Edit.html
+++ b/client/views/templates/Edit.html
@@ -1,5 +1,3 @@
-{{placeObject}}
-
 <md-content layout-padding>
     <div>
         <h3>Edit Place</h3>
@@ -7,7 +5,7 @@
 
             <div layout-gt-xs='row'>
                 <md-input-container class='md-block' flex-gt-xs>
-                    <label>Name of Place (Search)</label>
+                    <label>Name of Place</label>
                     <input ng-model='location.name'>
                 </md-input-container>
 
