--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,16 +1,5 @@
-<!-- <div class="views-nav">
-
-    <div class = 'row navBar'>
-      <ul class = 'nav nav-pills'>
-        <li role = 'presentation'><a href="#/tovisit">To Visit</a></li>
-        <li role = 'presentation'><a href="#/visited">Visited</a></li>
-        <button class="btn btn-default" ng-click="logout()">Log Out</button>
-      </ul>
-    </div>
-</div> -->
-
 <div layout="row" layout-align="center center">
-<md-content>
+<md-content id='navBarContent'>
   <md-nav-bar
      md-selected-nav-item="currentNavItem"
      nav-bar-aria-label="navigation links">
