--- a/server/public/views/templates/Visited.html
+++ b/server/public/views/templates/Visited.html
@@ -1,9 +1,27 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
+<div class="list_container">
+
       <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data | filter: {visited:"true"} | orderBy:"id":true'>
 
-        <md-card-actions layout="row" layout-align="end end">
-          <md-menu>
+        <md-card-actions layout="row">
+
+          <md-card-title>
+
+            <!-- IMAGE -->
+            <md-card-title-media>
+                <div class="md-media-sm card-media"></div>
+            </md-card-title-media>
+
+            <md-card-title-text>
+                <span class="md-headline">{{place.name}}</span>
+                <span class="md-subhead">{{place.type}}</span>
+                <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
+            </md-card-title-text>
+
+          </md-card-title>
+
+          <md-menu id="cardMenu" layout-align="end end">
               <md-button class="md-icon-button" aria-label="More" ng-click="openMenu($mdMenu, $event)">
                 <i class="material-icons">more_vert</i>
               </md-button>
@@ -13,9 +31,7 @@
                     <b>EDIT</b>
                   </md-button>
                 </md-menu-item>
-
                 <md-menu-divider></md-menu-divider>
-
                 <md-menu-item>
                   <md-button ng-click="deletePlace()">
                     <b>DELETE</b>
@@ -23,19 +39,9 @@
                 </md-menu-item>
               </md-menu-content>
             </md-menu>
+
           </md-card-actions>
 
-        <md-card-title>
-          <md-card-title-text>
-            <span class="md-headline">{{place.name}}</span>
-            <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
-            <span>{{place._id}}</span>
-            <span>{{place.visited}}</span>
-          </md-card-title-text>
-                      <!-- <md-card-title-media>
-                        <div class="md-media-sm card-media"></div>
-                      </md-card-title-media> -->
-        </md-card-title>
         <md-card-actions layout="row" layout-align="end center">
           <!-- <md-button ng-click='getID(place._id)' href='#/submit'>Do This!</md-button> -->
           <md-button ng-click='expandPanel()'>See More...</md-button>
