--- a/client/views/templates/Landing.html
+++ b/client/views/templates/Landing.html
@@ -1,7 +1,15 @@
-<div class="container">
-  <!-- <h1>Welcome to Bucket //</h1> -->
-  <button><a href="#/home">Login</a></button>
-  <button><a href="#/register">Register</a></button>
-  <br><img src="../styles/imgs/mplsSkyline.jpg" />
+<div class="container" layout='column' layout-align='center center'>
+  <md-content>
+
+    <md-card>
+        <img ng-src="../styles/imgs/mplsSkyline.jpg" class="md-card-image" alt="Minneapolis Skyline">
+    </md-card>
+
+        <div layout='row' layout-align='center center' layout-wrap>
+          <md-button href="#/home">Login</md-button>
+          <md-button href="#/register">Register</md-button>
+        </div>
+
+  </md-content>
 
 </div>
