--- a/client/views/templates/Edit.html
+++ b/client/views/templates/Edit.html
@@ -6,12 +6,12 @@
             <div layout-gt-xs='row'>
                 <md-input-container class='md-block' flex-gt-xs>
                     <label>Name of Place</label>
-                    <input ng-model='location.name'>
+                    <input type='text' ng-model='location.name'>
                 </md-input-container>
 
                 <md-input-container class='md-block' flex-gt-xs>
                     <label>Date Added</label>
-                    <md-datepicker ng-model='location.dateAdded' placeholder ="{{placeObject.place.dateAdded}}"></md-datepicker>
+                    <md-datepicker ng-model='location.dateAdded'></md-datepicker>
                 </md-input-container>
 
                 <md-input-container class='md-block' flex-gt-xs>
