--- a/client/views/templates/Edit.html
+++ b/client/views/templates/Edit.html
@@ -1,20 +1,23 @@
 <md-content layout-padding>
-    <div>
-        <h3>Edit Place</h3>
-        <form name='newPlaceForm'>
+      <div layout='row' layout-align='center center'>
+          <h3 class='md-headline'>Editing Place</h3>
+      </div>
+        <form name='editPlaceForm'>
 
-            <div layout-gt-xs='row'>
+            <div flex-sm>
                 <md-input-container class='md-block' flex-gt-xs>
                     <label>Name of Place</label>
                     <input type='text' ng-model='location.name'>
                 </md-input-container>
+            </div>
 
-                <md-input-container class='md-block' flex-gt-xs>
+            <div layout='row'>
+              <md-input-container flex="35">
                     <label>Date Added</label>
-                    <md-datepicker ng-model='location.dateAdded'></md-datepicker>
+                    <md-datepicker md-hide-icons="calendar" md-open-on-focus ng-model='location.dateAdded'></md-datepicker>
                 </md-input-container>
 
-                <md-input-container class='md-block' flex-gt-xs>
+                <md-input-container flex="65">
                     <label>Type</label>
                     <md-select ng-model='location.type' placeholder ="{{placeObject.place.type}}">
                         <md-option ng-repeat='type in types' value='{{type.type}}'>
@@ -36,8 +39,10 @@
                     <label>City</label>
                     <input ng-model='location.city' placeholder ="{{placeObject.place.city}}">
                 </md-input-container>
+            </div>
 
-                <md-input-container class='md-block' flex-gt-xs>
+            <div layout='row'>
+                <md-input-container flex='50'>
                     <label>State</label>
                     <md-select ng-model='location.state' placeholder ="{{placeObject.place.state}}">
                         <md-option ng-repeat='state in states' value='{{state.abbrev}}'>
@@ -46,7 +51,7 @@
                     </md-select>
                 </md-input-container>
 
-                <md-input-container class='md-block' flex-gt-xs>
+                <md-input-container flex='50'>
                     <label>Zip Code</label>
                     <input ng-model='location.zipcode' placeholder ="{{placeObject.place.zipcode}}">
                 </md-input-container>
@@ -66,14 +71,14 @@
                 </md-input-container>
 
                 <md-input-container class='md-block' flex-gt-xs>
-                    <label>Notes</label>
+                    <label>Recommendations</label>
                     <input ng-model='location.recNotes' placeholder ="{{placeObject.place.recNotes}}">
                 </md-input-container>
             </div>
 
             <div layout="row" layout-align="end center">
-                <md-button class='md-raised' href='#/tovisit'>Cancel</md-button>
-                <md-button class='md-raised' ng-click ='editPlace(placeObject, location)' href='#/tovisit'>Save Changes</md-button>
+                <md-button class='md-raised md-primary md-hue-1' href='#/tovisit'>Cancel</md-button>
+                <md-button class='md-raised md-primary md-hue-3' ng-click ='editPlace(placeObject, location)' href='#/tovisit'>Save Changes</md-button>
             </div>
 
         </form>
