--- a/client/views/templates/Submit.html
+++ b/client/views/templates/Submit.html
@@ -2,21 +2,25 @@
 <!-- SUBMIT PLACE FORM -->
 
 <md-content layout-padding>
-  <div>
+  <div layout='row' layout-align='center center'>
+      <h3 class='md-headline'>Visiting This Place</h3>
+  </div>
     <form>
 
-      <div layout-gt-xs='row'>
+      <div flex-sm>
         <md-input-container class='md-block' flex-gt-xs>
           <label>Name of Place (Search)</label>
           <input ng-model='location.name' placeholder ="{{placeObject.place.name}}" disabled>
         </md-input-container>
+      </div>
 
-        <md-input-container class='md-block' flex-gt-xs>
+      <div layout='row'>
+        <md-input-container flex="35">
           <label>Date Added</label>
-          <input ng-model='location.dateAdded' placeholder='{{placeObject.place.dateAdded | date:"MM/dd/yyyy"}}' disabled>
+          <input ng-model='location.dateAdded | date:"MM/dd/yyyy"' md-hide-icons="calendar"  disabled>
         </md-input-container>
 
-        <md-input-container class='md-block' flex-gt-xs>
+        <md-input-container flex="65">
           <label>Type</label>
           <md-select ng-model='location.type' placeholder ='{{placeObject.place.type}}' disabled>
             <md-option ng-repeat='type in types' value='{{type.type}}'>
@@ -38,17 +42,19 @@
           <label>City</label>
           <input ng-model='location.city' placeholder ='{{placeObject.place.city}}' disabled>
         </md-input-container>
+      </div>
 
-        <md-input-container class='md-block' flex-gt-xs>
-          <label>State</label>
-          <md-select ng-model='location.state' placeholder ='{{placeObject.place.state}}' disabled>
-            <md-option ng-repeat='state in states' value='{{state.abbrev}}'>
-              {{state.abbrev}}
-            </md-option>
-          </md-select>
+      <div layout='row'>
+          <md-input-container flex='50'>
+            <label>State</label>
+            <md-select ng-model='location.state' placeholder ='{{placeObject.place.state}}' disabled>
+              <md-option ng-repeat='state in states' value='{{state.abbrev}}'>
+                {{state.abbrev}}
+              </md-option>
+            </md-select>
         </md-input-container>
 
-        <md-input-container class='md-block' flex-gt-xs>
+        <md-input-container flex='50'>
           <label>Zip Code</label>
           <input ng-model='location.zipcode' placeholder ='{{placeObject.place.zipcode}}' disabled>
         </md-input-container>
@@ -68,26 +74,26 @@
         </md-input-container>
 
         <md-input-container class='md-block' flex-gt-xs>
-          <label>Notes</label>
+          <label>Recommendations</label>
           <input ng-model='location.recNotes' placeholder ='{{placeObject.place.recNotes}}' disabled>
         </md-input-container>
       </div>
 
-      <div layout-gt-xs='row'>
-        <md-input-container class='md-block' flex-gt-xs>
-          <label>Personal Notes</label>
-          <input ng-model='location.userNotes'>
-        </md-input-container>
+      <div layout='row'>
+          <md-input-container flex='65'>
+            <label>Personal Notes</label>
+            <input ng-model='location.userNotes' placeholder='Add your thoughts here!'>
+          </md-input-container>
 
-        <md-input-container class='md-block' flex-gt-xs>
+        <md-input-container flex='35'>
           <label>Date Visited</label>
-          <md-datepicker ng-model='location.dateVisited' ></md-datepicker>
+          <md-datepicker md-hide-icons="calendar" md-open-on-focus ng-model='location.dateVisited' ></md-datepicker>
         </md-input-container>
       </div>
 
       <div layout="row" layout-align="end center">
-        <md-button class='md-raised' href='#/tovisit'>Cancel</md-button>
-        <md-button class='md-raised' ng-click ='submitPlace(placeObject, location)' href='#/tovisit'>Finish Event!</md-button>
+        <md-button class='md-raised md-primary md-hue-1' href='#/tovisit'>Cancel</md-button>
+        <md-button class='md-raised md-primary md-hue-3' ng-click ='submitPlace(placeObject, location)' href='#/tovisit'>Finish Event!</md-button>
       </div>
     </form>
   </div>
