--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,14 +1,14 @@
+<div ng-controller="HeaderController" ng-cloak=''>
+
 <div layout="row" layout-align="center center">
 <md-content id='navBarContent'>
   <md-nav-bar
      md-selected-nav-item="currentNavItem"
      nav-bar-aria-label="navigation links">
-     <md-nav-item md-nav-href="#/tovisit" name="tovisit">
-       To Visit
-     </md-nav-item>
-     <md-nav-item md-nav-href="#/visited" name="visited">
-       Visited
-     </md-nav-item>
+     <md-nav-item md-nav-href="#/tovisit" name="tovisit" value='tovisit'>To Visit</md-nav-item>
+     <md-nav-item md-nav-href="#/visited" name="visited" value='visited'>Visited</md-nav-item>
   </md-nav-bar>
 </md-content>
+</div>
+
 </div>
