--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -51,7 +51,7 @@
 md-nav-bar {
   background-color: #ffffff; }
 
-.md-button.md-fab.md-fab-bottom-right {
+.md-button.md-fab.md-fab-bottom-left {
     top: auto;
     right: 20px;
     bottom: 20px;
@@ -73,17 +73,13 @@ md-nav-bar {
     min-width: 24px;
 }
 
-.card-media {
+/*.card-media {
   background-color: #999999;
-}
+}*/
 
 #navBarContent {
   background-color: transparent !important;
 }
-
-/*md-content md-nav-bar {
-  background: transparent;
-}*/
 
 md-content md-nav-bar md-tabs-wrapper {
   background: white;
@@ -111,4 +107,8 @@ md-card .md-actions:not(.layout-column) .md-button.md-icon-button:last-of-type, 
 h1:focus {
    outline: none;
    border: 0;
+}
+
+md-card-header {
+  height: 60px;
 }
