--- a/client/views/templates/Visited.html
+++ b/client/views/templates/Visited.html
@@ -2,51 +2,40 @@
 
 <div class="list_container">
 
-      <md-card md-theme="{{ showDarkTheme ? 'dark-purple' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data | filter: {visited:"true"} | orderBy:"id":true'>
+  <md-card md-theme="{{ showDarkTheme ? 'primary' : 'default' }}" md-theme-watch ng-repeat='place in locationList.data | filter: {visited:"true"} | orderBy:"id": true'>
 
-        <md-card-actions layout="row">
+    <md-card-header layout='row' md-colors="::{backgroundColor: 'default-primary-A100'}">
+       <md-card-title-text flex='90'>
+         <span class="md-title">{{place.name}}</span>
+       </md-card-title-text>
 
-          <md-card-title>
+       <md-button class="md-icon-button" aria-label="More" ng-click="getThisPlace(place)" href='#/edit' flex='10'>
+         <i class="material-icons">edit</i>
+       </md-button>
 
-            <!-- IMAGE -->
-            <md-card-title-media>
-                <div class="md-media-sm card-media"></div>
-            </md-card-title-media>
+       <md-button class="md-icon-button" aria-label="More" ng-click="deletePlace(place)" flex='10'>
+         <i class="material-icons">delete</i>
+       </md-button>
 
-            <md-card-title-text>
-                <span class="md-headline">{{place.name}}</span>
-                <span class="md-subhead">{{place.type}}</span>
-                <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
-            </md-card-title-text>
+       </md-card-header>
 
-          </md-card-title>
+       <md-card-content layout='row'>
+         <div flex='80'>
+           <span class="md-subhead">{{place.type}}</span><br>
+           <span class="md-subhead">{{place.dateAdded | date:"MM/dd/yyyy"}}</span>
+         </div>
 
-          <md-menu id="cardMenu" layout-align="end end">
-              <md-button class="md-icon-button" aria-label="More" ng-click="openMenu($mdMenu, $event)">
-                <i class="material-icons">more_vert</i>
-              </md-button>
-              <md-menu-content width="3">
-                <md-menu-item>
-                  <md-button ng-click="editPlace()" href='#/edit'>
-                    <b>EDIT</b>
-                  </md-button>
-                </md-menu-item>
-                <md-menu-divider></md-menu-divider>
-                <md-menu-item>
-                  <md-button ng-click="deletePlace()">
-                    <b>DELETE</b>
-                  </md-button>
-                </md-menu-item>
-              </md-menu-content>
-            </md-menu>
+          <md-card-image flex='20'>
+            <div class="md-media-sm card-media">
+              <img src="../styles/imgs/{{place.image}}" class="md-card-image" alt="place image"/>
+            </div>
+          </md-card-image>
+        </md-card-content>
 
-          </md-card-actions>
+      <md-card-actions layout="row" layout-align="end center">
+        <md-button ng-click='getThisPlace(place)' href='#/submit'>Do This!</md-button>
+        <md-button ng-click='getThisPlace(place)' href='#/expand'>Details</md-button>
+      </md-card-actions>
+    </md-card>
 
-        <md-card-actions layout="row" layout-align="end center">
-          <!-- <md-button ng-click='getID(place._id)' href='#/submit'>Do This!</md-button> -->
-          <md-button ng-click='expandPanel()'>See More...</md-button>
-        </md-card-actions>
-      </md-card>
-</div>
-
-</div>
+ </div>
