--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -22,8 +22,8 @@
               </div>
 
       <div>
-          <md-button class='md-raised' type="submit" name='submit'>Log In</md-button>
-          <md-button class='md-raised' href="#landing">Back</md-button>
+          <md-button class='md-raised md-primary md-hue-3' type="submit" name='submit'>Log In</md-button>
+          <md-button class='md-raised md-primary md-hue-1' href="#landing">Back</md-button>
       </div>
 
       </form>
