--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -23,8 +23,8 @@
         <!-- <input class="btn btn-default" type="submit" name="submit" value="Register" />
         <a href="#home">Cancel</a> -->
         <div>
-            <md-button class='md-raised' type="submit" name='submit'>Register</md-button>
-            <md-button class='md-raised' href="#landing">Back</md-button>
+            <md-button class='md-raised md-primary md-hue-3' type="submit" name='submit'>Register</md-button>
+            <md-button class='md-raised md-primary md-hue-1' href="#landing">Back</md-button>
         </div>
 
         </form>
