--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
     <head>
+        <meta charset='utf-8'>
         <title>Bucket//</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
@@ -10,9 +11,6 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-        <link rel="stylesheet" href="vendors/angular-xeditable/css/xeditable.css" rel="stylesheet">
-        <link rel="stylesheet" href="vendors/alertify/alertify.min.css" />
-        <link rel="stylesheet" href="vendors/alertify/themes/default.min.css" />
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
         <script type="text/javascript" src="vendors/angular-aria/angular-aria.js"></script>
@@ -21,15 +19,15 @@
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="vendors/angular-material-expansion-panel/md-expansion-panel.min.js"></script>
         <script type="text/javascript" src="vendors/angular-xeditable/js/xeditable.js"></script>
-        <script src="vendors/alertify/alertify.min.js"></script>
+        <script type="text/javascript" src="vendors/angular-css/angular-css.min.js"></script>
         <script type="text/javascript" src="scripts/client.min.js"></script>
 
     </head>
 
     <body>
-      <div ng-controller='HeaderController'>
+      <!-- <div ng-controller='HeaderController'>
         <header ng-include="'/views/partials/header.html'"></header>
-      </div>
+      </div> -->
 
       <main ng-view></main>
 
