--- a/client/views/templates/Landing.html
+++ b/client/views/templates/Landing.html
@@ -1,16 +1,7 @@
 <div class="container" layout='column' layout-align='center center'>
-
-  <div class="md-card-wrapper">
-
-    <span layout='row' layout-align='center center' layout-wrap>
+    <div class='landingPageDiv' layout='column' layout-align='center center'>
+      <h1>Bucket //</h1>
       <md-button class='md-raised md-primary md-hue-3' href="#/home">Login</md-button>
-      <md-button class='md-raised md-primary md-hue-1' href="#/register">Register</md-button>
-    </span>
-
-      <md-card>
-        <img ng-src="../styles/imgs/mplsSkyline.jpg" alt="Minneapolis Skyline" id='landingPageImg'>
-      </md-card>
-
-  </div>
-
+      <p>Not a user? <a href="#/register">Register here</a></p>
+    </div>
 </div>
