--- a/client/views/templates/Add.html
+++ b/client/views/templates/Add.html
@@ -1,6 +1,6 @@
 <md-content layout-padding>
     <div layout='row' layout-align='center center'>
-        <h3 class='md-headline'>Add New Place</h3>
+        <h3 class='md-headline'>Add a New Place</h3>
     </div>
         <form name='newPlaceForm'>
 
