--- a/server/public/views/templates/Edit.html
+++ b/server/public/views/templates/Edit.html
@@ -1,6 +1,6 @@
 <md-content layout-padding>
       <div layout='row' layout-align='center center'>
-          <h3 class='md-headline'>Editing Place</h3>
+          <h3 class='md-headline'>Editing {{placeObject.place.name}}</h3>
       </div>
         <form name='editPlaceForm'>
 
