--- a/server/public/views/templates/Submit.html
+++ b/server/public/views/templates/Submit.html
@@ -3,7 +3,7 @@
 
 <md-content layout-padding>
   <div layout='row' layout-align='center center'>
-      <h3 class='md-headline'>Visiting This Place</h3>
+      <h3 class='md-headline'>Visiting {{placeObject.place.name}}</h3>
   </div>
     <form>
 
